--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@splidejs/splide",
-  "version": "4.1.3",
-  "description": "Splide is a lightweight, flexible and accessible slider/carousel. No dependencies, no Lighthouse errors.",
-  "author": "Naotoshi Fujita",
+  "name": "@gwroger/@splidejs/splide",
+  "version": "0.0.1",
+  "description": "Based on Splidejs. We had an horizontal scroll option. Splide is a lightweight, flexible and accessible slider/carousel. No dependencies, no Lighthouse errors.",
   "license": "MIT",
   "main": "dist/js/splide.cjs.js",
   "module": "dist/js/splide.esm.js",
